--- a/app.json
+++ b/app.json
@@ -6,8 +6,8 @@
     
     
     "ads":{
-        "bannerId": "",
-        "interstitialId": ""
+        "bannerId": "3784762348272968_3784764311606105",
+        "interstitialId": "3784762348272968_3784765791605957"
     },
     
     
