--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
         },
         "page4": {
           "title": "MBC MAX",
-          "url": "https://shls-mbcmax-prod-dub.shahid.net/out/v1/13815a7cda864c249a88c38e66a2e653/index_3.m3u8",
+          "url": "http://r32g5k9gm3.a5ge6t4sve79r.com/live/ramdisk/2m_monde/hls_video_ts_tuhawxpiemz257adfc/2m_monde-avc1_400000=2-mp4a_130400_qad=1.m3u8",
           "img": "https://abdersl.github.io/MBCLIVE/max.jpg"
         },
         "page5": {
