--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
         },
         "page5": {
           "title": "MBC 3",
-          "url": "https://shls-mbc3-prod-dub.shahid.net/out/v1/d5bbe570e1514d3d9a142657d33d85e6/index_3.m3u8",
+          "url": "https://cdnamd-hls-globecast.akamaized.net/live/ramdisk/2m_monde/hls_video_ts_tuhawxpiemz257adfc/2m_monde-avc1_1500000=4-mp4a_130400_qad=1.m3u8",
           "img": "https://abdersl.github.io/MBCLIVE/3.jpg"
             
         },
