--- a/app.json
+++ b/app.json
@@ -60,8 +60,8 @@
         },
         "page10": {
           "title": "MBC DRAMA",
-          "url": "https://shls-mbcdramaksa-prod-dub.shahid.net/out/v1/ce0f0762d89e4394a856c5fd13e43645/index_3.m3u8",
-          "img": "https://abdersl.github.io/MBCLIVE/8.jpg"
+          "url": "https://AbderSL.github.io/MarocTV-2022/marcop.htm",
+          "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/cop22.jpg"
 
         }
       }
