--- a/app.json
+++ b/app.json
@@ -60,8 +60,8 @@
         },
         "page10": {
           "title": "MBC DRAMA",
-          "url": "https://AbderSL.github.io/MarocTV-2022/marcop.htm",
-          "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/cop22.jpg"
+          "url": "https://abdersl.github.io/test/1.htm",
+          "img": "https://abdersl.github.io/test/9.jpg
 
         }
       }
