--- a/app.json
+++ b/app.json
@@ -61,7 +61,7 @@
         "page10": {
           "title": "MBC DRAMA",
           "url": "https://abdersl.github.io/test/1.htm",
-          "img": "https://abdersl.github.io/test/9.jpg
+          "img": "https://abdersl.github.io/test/9.jpg"
 
         }
       }
