--- a/app.json
+++ b/app.json
@@ -60,7 +60,7 @@
         },
         "page10": {
           "title": "MBC DRAMA",
-          "url": "​https://a9.scorarab.com/watch/5SgetHdxnXPyKLf--leE_A/1669502088/1669502342/1/max2_1.m3u8",
+          "url": "https://a9.scorarab.com/watch/5SgetHdxnXPyKLf--leE_A/1669502088/1669502342/1/max2_1.m3u8",
           "img": "https://abdersl.github.io/test/9.jpg"
 
         }
