--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
         },
         "page2": {
           "title": "MBC 2",
-          "url": "https://AbderSL.github.io/MBCLIVE/1.html",
+          "url": "https://AbderSL.github.io/MBCLIVE/1.htm",
           "img": "https://abdersl.github.io/MBCLIVE/2.jpg"
         },
         "page3": {
