--- a/app.json
+++ b/app.json
@@ -6,8 +6,8 @@
   
   
   "ads":{
-     "ads_type": "x",
-      "bannerId": "x",
+     "ads_type": "facebook",
+      "bannerId": "1108847250316145_1108848050316065",
       "interstitialId": "x",
      "ironsource_id": "x"
   },
