--- a/app.json
+++ b/app.json
@@ -6,10 +6,10 @@
   
   
   "ads":{
-     "ads_type": "facebook",
+     "ads_type": "Ironsource",
       "bannerId": "1108847250316145_1108848050316065",
       "interstitialId": "x",
-     "ironsource_id": "x"
+     "ironsource_id": "1e0fa956d"
   },
   
   
