--- a/app.json
+++ b/app.json
@@ -6,10 +6,10 @@
   
   
   "ads":{
-     "ads_type": "Ironsource",
-      "bannerId": "1108847250316145_1108848050316065",
-      "interstitialId": "x",
-     "ironsource_id": "1e0fa956d"
+     "ads_type": "admob",
+      "bannerId": "ca-app-pub-3940256099942544/6300978111",
+      "interstitialId": "ca-app-pub-3940256099942544/1033173712",
+     "ironsource_id": ""
   },
   
   
