--- a/app.json
+++ b/app.json
@@ -6,10 +6,10 @@
   
   
   "ads":{
-     "ads_type": "admob",
-      "bannerId": "ca-app-pub-3940256099942544/6300978111",
-      "interstitialId": "ca-app-pub-3940256099942544/1033173712",
-     "ironsource_id": ""
+     "ads_type": "ironsource",
+      "bannerId": "",
+      "interstitialId": "",
+     "ironsource_id": "172568e55"
   },
   
   
