--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "ads":{
      "ads_type": "Facebook",
       "bannerId": "1108847250316145_1108848050316065",
-      "interstitialId": "",
+      "interstitialId": "1108847250316145_1299033177964217",
      "ironsource_id": ""
   },
   
