--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   },
   
   
-     "content": {
+      "content": {
         "page1": {
           "title": "2M Maroc  الثانية المغربية",
           "url": "https://AbderSL.github.io/MAROCTV-2024/M2.html",
@@ -38,12 +38,12 @@
         },
         "page5": {
           "title": "Attaqafia  الرابعة التقافية",
-          "url": "https://AbderSL.github.io/MarocTV-2022/Altaqafia.html",
+          "url": "https://snrtlive.ma/fr/athaqafia",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/4.jpg"
         },
         "page6": {
           "title": "Assadissa قناة محمد السادس",
-          "url": "https://AbderSL.github.io/MarocTV-2022/Assadissa.html",
+          "url": "https://snrtlive.ma/fr/assadissa",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/6.jpg"
         },
         "page7": {
