--- a/app.json
+++ b/app.json
@@ -65,7 +65,11 @@
           "title": "M24TV المغرب 24",
           "url": "https://AbderSL.github.io/MarocTV-2022/M24.html",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/M24.jpg"
-		
+		    },
+        "page10": {
+          "title": "2M",
+          "url": "https://AbderSL.github.io/MAROCTV-2024/Test3.html",
+          "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/2M.jpg"
 	
 
         }
