--- a/app.json
+++ b/app.json
@@ -22,13 +22,13 @@
         },
         "page2": {
           "title": "Aloula  الأولى المغربية",
-          "url": "https://snrtlive.ma/fr/al-aoula",
+          "url": "https://snrtlive.ma/ar/al-aoula",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/1.jpg"           
 
         },
         "page3": {
           "title": "Almeghribia  الخامسة المغربية 5",
-          "url": "https://snrtlive.ma/fr/almaghribia",
+          "url": "https://snrtlive.ma/ar/almaghribia",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/5.jpg"
         },
         "page4": {
@@ -38,17 +38,17 @@
         },
         "page5": {
           "title": "Attaqafia  الرابعة التقافية",
-          "url": "https://snrtlive.ma/fr/athaqafia",
+          "url": "https://snrtlive.ma/ar/athaqafia",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/4.jpg"
         },
         "page6": {
           "title": "Assadissa قناة محمد السادس",
-          "url": "https://snrtlive.ma/fr/assadissa",
+          "url": "https://snrtlive.ma/ar/assadissa",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/6.jpg"
         },
         "page7": {
           "title": "Tamazight تمازيغت",
-          "url": "https://snrtlive.ma/fr/tamazight",
+          "url": "https://snrtlive.ma/ar/tamazight",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/8.jpg"
 	    },
         "page8": {
