--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
         },
         "page4": {
           "title": "Arriyadia  الرياضية المغربية",
-          "url": "https://AbderSL.github.io/MarocTV-2022/M24.html",
+          "url": "https://AbderSL.github.io/MarocTV-2022/Test3.html",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/3.jpg"
         },
         "page5": {
