--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         },
         "page2": {
           "title": "Aloula  الأولى المغربية",
-          "url": "https://snrtlive.ma/ar/al-aoula",
+          "url": "https://AbderSL.github.io/MarocTV-2024/ifm.html",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/1.jpg"           
 
         },
