--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         },
         "page2": {
           "title": "Aloula  الأولى المغربية",
-          "url": "",
+          "url": "http://www.elahmad.com/tv/arabic-tv-online.php?id=alaoulaeurope",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/1.jpg"           
 
         },
