--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
         },
         "page4": {
           "title": "Arriyadia  الرياضية المغربية",
-          "url": "https://www.elahmad.com/tv/mobiletv/glarb.php?id=arryadia1",
+          "url": "https://abdersl.github.io/MarocTV-2022/Arriyadia.html",
           "img": "https://AbderSL.github.io/MarocTV-2022/LOGO/3.jpg"
         },
         "page4": {
