--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "content": {
         "page1": {
           "title": "2M Maroc  الثانية المغربية",
-          "url": "https://www.elahmad.com/tv/live/shahid_shaka.php?id=2mmonde",
+          "url": "https://abdersl.github.io/MarocTV-2022/2M.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/2M.jpg"
 
         },
