--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         },
         "page2": {
           "title": "Aloula  الأولى المغربية",
-          "url": "https://abdersl.github.io/MarocTV-2022/Aloula.html",
+          "url": "https://abdersl.github.io/MarocTV-2022/AL.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/1.jpg" 
         },
         "page3": {
@@ -33,12 +33,12 @@
         },
         "page4": {
           "title": "Almeghribia  الخامسة المغربية 5",
-          "url": "https://abdersl.github.io/MarocTV-2022/Almeghribia.html",
+          "url": "https://abdersl.github.io/MarocTV-2022/ALM.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/5.jpg"
         },
         "page5": {
           "title": "Arriyadia  الرياضية المغربية",
-          "url": "https://abdersl.github.io/MarocTV-2022/Arriyadia.html",
+          "url": "https://abdersl.github.io/MarocTV-2022/ARR.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/3.jpg"
         },
         "page6": {
@@ -53,7 +53,7 @@
         },
         "page8": {
           "title": "Tamazight تمازيغت",
-          "url": "https://abdersl.github.io/MarocTV-2022/Tamazight.html",
+          "url": "https://abdersl.github.io/MarocTV-2022/TAM.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/8.jpg"
 	    },
         "page9": {
