--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
         },
         "page5": {
           "title": "Arriyadia  الرياضية المغربية",
-          "url": "https://abdersl.github.io/MarocTV-2022/ARR.html",
+          "url": "https://abdersl.github.io/MarocTV-2022/ARRHD1.html",
           "img": "https://AbderSL.github.io/MAROCTV-2024/LOGO24/3.jpg"
         },
         "page6": {
